syntax = "proto3";

package zksync.config.object_store;

message ObjectStore {
  message Gcs {
    optional string bucket_base_url = 1; // required; url
  }

  message GcsWithCredentialFile {
    optional string bucket_base_url = 1; // required; url
    optional string gcs_credential_file_path = 4; // required; fs path
  }

  message GcsAnonymousReadOnly {
    optional string bucket_base_url = 1; // required; url
  }

  message FileBacked {
    optional string file_backed_base_path = 3; // required; fs path
  }

  message S3Env {
    optional string endpoint = 1;
    optional string region = 2;
    optional string bucket = 3;
  }

  message S3Credentials {
    optional string endpoint = 1;
    optional string region = 2;
    optional string bucket = 3;
    optional string access_key = 4;
    optional string secret_key = 5;
  }

  oneof mode {
    Gcs gcs = 1;
    GcsWithCredentialFile gcs_with_credential_file = 2;
    GcsAnonymousReadOnly gcs_anonymous_read_only = 3;
    FileBacked file_backed = 4;
    S3Env s3_env = 7;
    S3Credentials s3_credentials = 8;
  }

  optional uint32 max_retries = 5; // required
  optional string local_mirror_path = 6; // optional; fs path
}
